# quakeMovement

./: .gitignore  CMakeLists.txt  README.md  cl.sh  cmain.cpp  message.cpp  message.h  shared.cpp  shared.h  smain.cpp  sv.sh  todo
drawstuff/src/: CMakeLists.txt  config.h  drawstuff.cpp  internal.h  x11.cpp
include/drawstuff/: drawstuff.h
